--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
     src: url('../Dancing_Script/DancingScript-VariableFont_wght.ttf');
 }
 .main-color{
-    background: linear-gradient(180deg, rgba(54,1,90,1) 19%, rgba(72,2,121,0.92) 61%, rgba(115,3,192,0.72) 100%);
+    background: linear-gradient(180deg, rgb(33,8,49) 19%, rgba(29, 1, 49, 0.92) 61%, rgba(2, 0, 3, 0.72) 100%);
 }
 .team-color{
     background: linear-gradient(180deg, rgba(115,3,192,0.72) 0%, rgba(77,2,139,1) 17%, rgba(54,1,90,1) 100%);
