--- a/src/components/About page/About.module.css
+++ b/src/components/About page/About.module.css
@@ -34,6 +34,10 @@
 }
 .tablechild2{
     max-width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     font-size: 1.3rem;
 }
 .tablechild2 img{
